deploy: 9dcb5dcfd4bcd1027a91c917ca5a035b694313bf

--- a/office.html
+++ b/office.html
@@ -8,12 +8,12 @@
     <meta charset="utf-8" />
     <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
     <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/css/images.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/css/windows.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/assets/css/images.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/assets/css/windows.css" />
     <meta property="og:locale" content="zh_CN" />
     <meta property="og:type" content="webpage">
     <meta property="og:title" content="MSDN官方原版Office软件下载 - MSDN镜像库">
-    <meta property="og:image" content="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/images/logo1.png">
+    <meta property="og:image" content="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/assets/images/logo1.png">
     <meta property="og:url" content="https://msdn.lopins.cn/office.html">
     <meta property="og:description" content="MSDN镜像库为你提供MSDN官方原版镜像，原版win11，win10，win8/8.1，win7，win xp，win server，office全系列官方镜像下载与安装等服务。">
     <meta property="og:site_name" content="MSDN镜像库">
@@ -23,7 +23,7 @@
     <div class="header">
         <div class="logo">
             <a href="/">
-                <img src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/images/logo2.png" alt="MSDN镜像库 - 微软官方原版镜像仓库"/>
+                <img src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/assets/images/logo2.png" alt="MSDN镜像库 - 微软官方原版镜像仓库"/>
             </a>
         </div>
         <div class="close_btn2">
@@ -37,7 +37,7 @@
                 <div class="show_name">MSDN镜像库</div>
                 <div class="show_desc">微软官方原版镜像仓库</div>
                 <div class="show_img">
-                    <img id="w_img" src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/images/default_windows.png" alt="Windows原版镜像下载站" style="height:470px"/>
+                    <img id="w_img" src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/assets/images/default_windows.png" alt="Windows原版镜像下载站" style="height:470px"/>
                 </div>
                 <div class="show_detail" id="home_desc">
                 </div>
@@ -49,7 +49,7 @@
         <div class="right">
             <div class="office_btn">
                 <a href="index.html" class="function_btn to_office">
-                    <div>下载Windows</div><img class="down_icon" src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/images/ic_download.svg" alt="下载Windows"></img>
+                    <div>下载Windows</div><img class="down_icon" src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/assets/images/ic_download.svg" alt="下载Windows"></img>
                 </a>
             </div>
             <div class="version_box version_content">
@@ -108,7 +108,7 @@
                     <div class="show_name">MSDN镜像库</div>
                     <div class="show_desc">微软官方原版镜像仓库</div>
                     <div class="show_img" id="img">
-                        <img id="d_img" src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/images/win10.png" />
+                        <img id="d_img" src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/assets/images/win10.png" />
                     </div>
                     <div class="show_detail" id="desc">
                     </div>
@@ -116,7 +116,7 @@
             </div>
             <div class="right">
                 <div class="office_btn">
-                    <!--                <div class="function_btn to_office"><div>下载Office</div><img class="down_icon" src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/images/ic_download.svg"></img></div>-->
+                    <!--                <div class="function_btn to_office"><div>下载Office</div><img class="down_icon" src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/assets/images/ic_download.svg"></img></div>-->
                 </div>
                 <div class="version_box">
                     <div class="choose">
@@ -135,18 +135,18 @@
                     <div id="area_url" class="down_btn"></div>
                     <!-- 底部广告 -->
                     <!-- <div class="course_btn">
-                        <a href="list.html" target="_blank" id="jc_url">安装教程<img src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/images/download_right.png"></a>
-                        <a href="soft.html">软件推荐<img src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/images/download_right.png"></a>
-                        <a href="javascript:void(0)" class="tip">更新推送<img src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/images/download_right.png">
+                        <a href="list.html" target="_blank" id="jc_url">安装教程<img src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/assets/images/download_right.png"></a>
+                        <a href="soft.html">软件推荐<img src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/assets/images/download_right.png"></a>
+                        <a href="javascript:void(0)" class="tip">更新推送<img src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/assets/images/download_right.png">
                             <i style="top: -205px;width: unset;left: -80px;">
                                 <img style="width: 200px; height: 200px" src="https://api.qrserver.com/v1/create-qr-code/?size=150×150&data=https://u.wechat.com/MNc8vfMgE0m7Ug732Un4kGA?s=2" />
                             </i>
                         </a>
-                        <a href="https://hipc.cn/?ku" target="_blank">微信控制电脑<img src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/images/download_right.png"></a>
+                        <a href="https://hipc.cn/?ku" target="_blank">微信控制电脑<img src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/assets/images/download_right.png"></a>
                         <a href="https://docs.hipc.cn/kaijika.html?ku" target="_blank">电脑远程开机<img
-                                src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/images/download_right.png"></a>
+                                src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/assets/images/download_right.png"></a>
                         <a href="https://www.haipc.cn/?ku" target="_blank">一个超好看的主页<img
-                                src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/images/download_right.png"></a>
+                                src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/assets/images/download_right.png"></a>
                     </div> -->
                 </div>
             </div>
@@ -159,7 +159,7 @@
         <div class="header">
             <div class="logo">
                 <a href="/">
-                    <img src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/images/logo1.png" />
+                    <img src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/assets/images/logo1.png" />
                 </a>
             </div>
             <div class="close_btn open">
@@ -169,12 +169,12 @@
         </div>
         <div class="box">
             <div class="content">
-                <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/js/foot_txt.js"></script>
+                <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/assets/js/foot_txt.js"></script>
             </div>
         </div>
     </div>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@2.2.4/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/js/images.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/lopinx/hugo-template@gh-pages/assets/js/images.js"></script>
 </body>
 
 </html>
