deploy: 5947b6245e83f3e6ef79ee9e1f314416a4a71d72

--- a/newui.html
+++ b/newui.html
@@ -74,7 +74,7 @@
     $(document).ready(function() {
         $.ajax({
             type: "get",
-            url: "./data/" + (dataFlag || 'windows') + ".json?t=" + Date.now(),
+            url: "https://cdn.jsdelivr.net/gh/lopinx/msdn-images-update@main/docs/data/" + (dataFlag || 'windows') + ".json?t=" + Date.now(),
             dataType: "json",
             success: function (res) {
                 let box = $(".container");
